--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -52,7 +52,6 @@
             <path url="/__/auth/callback" />
         </host>
     </universal-links>
-    <gap:plugin name="cordova-plugin-whitelist" source="npm" />
     <access origin="*" />
     <allow-navigation href="*" />
     <allow-intent href="*" />
@@ -61,4 +60,5 @@
     <preference name="DisallowOverscroll" value="true" />
     <preference name="android-minSdkVersion" value="14" />
     <preference name="BackupWebStorage" value="local" />
+    <preference name="AndroidLaunchMode" value="singleTask" />
 </widget>
