--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.workz.none" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:gap="http://phonegap.com/ns/1.0">
+<widget id="com.workz.none" version="1.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:gap="http://phonegap.com/ns/1.0">
     <feature name="BrowserTab">
         <param name="android-package" value="com.google.cordova.plugin.browsertab.BrowserTab" />
     </feature>
@@ -50,7 +50,7 @@
     <allow-navigation href="*" />
     <allow-intent href="*" />
     <universal-links>
-        <host name="workz.page.link/qL6j" scheme="https" />
+        <host name="workz.page.link" scheme="https" />
         <host name="workz-a9334.firebaseapp.com" scheme="https">
             <path url="/__/auth/callback" />
         </host>
@@ -60,5 +60,5 @@
     <preference name="DisallowOverscroll" value="true" />
     <preference name="android-minSdkVersion" value="14" />
     <preference name="BackupWebStorage" value="local" />
-    <preference name="AndroidLaunchMode" value="singleInstance" />
+    <preference name="AndroidLaunchMode" value="singleTask" />
 </widget>
